# docs/swagger.json
@@ -144,10 +144,39 @@
                 "summary": "管理员删除图书",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "书籍id",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tools.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/categories": {
+            "post": {
+                "description": "添加分类信息",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "category"
+                ],
+                "summary": "添加分类",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "分类名称",
+                        "name": "name",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -173,7 +202,7 @@
                 "summary": "管理员获取某个分类信息",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "分类id",
                         "name": "id",
                         "in": "path",
@@ -258,7 +287,7 @@
                 "summary": "管理员获取用户信息",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "用户id",
                         "name": "id",
                         "in": "path",
@@ -328,7 +357,7 @@
                         "required": true
                     },
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "用户帐号状态",
                         "name": "status",
                         "in": "formData",
@@ -568,33 +597,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "添加分类信息",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "添加分类",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "分类名称",
-                        "name": "name",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/tools.Response"
-                        }
-                    }
-                }
             }
         },
         "/categories/{id}": {
@@ -746,36 +748,6 @@
             }
         },
         "/user/users/records/:bookId": {
-            "put": {
-                "description": "用户还书",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "book"
-                ],
-                "summary": "用户还书",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "书籍id",
-                        "name": "bookId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/tools.Response"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "用户借书",
                 "produces": [
@@ -796,6 +768,38 @@
                         "type": "string",
                         "description": "书籍id",
                         "name": "bookId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tools.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/users/records/:id": {
+            "put": {
+                "description": "用户还书",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "book"
+                ],
+                "summary": "用户还书",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "借书记录的id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
